<resources>
    <string name="app_name">Jumping</string>
    <string name="prev_date">이전</string>
    <string name="next_date">이후</string>
    <string name="tab_button_title_customer">고객</string>
    <string name="tab_button_title_goods">상품</string>
    <string name="tab_button_title_calculate">정산</string>
    <string name="customer_menu_button_input">고객 입장</string>
    <string name="customer_menu_button_registration">고객 등록</string>
    <string name="customer_menu_button_input_list">입장 목록</string>
    <string name="customer_menu_button_addition">추가 구매</string>
    <string name="customer_menu_button_list">고객 목록</string>
    <string name="customer_search">조회</string>
    <string name="customer_search_hint">홍길동</string>
    <string name="name">이름</string>
    <string name="date">날짜</string>
    <string name="phone">전화번호</string>
    <string name="phone_hint">010-1111-2222</string>
    <string name="parents_phone">부모 전화번호</string>
    <string name="input_price">매입가격</string>
    <string name="sales_price">판매가격</string>
    <string name="sales_price_hint">1000</string>
    <string name="customer_using_play_time">이용시간</string>

    <string-array name="customer_using_time_items">
        <item>@string/select</item>
        <item>@string/customer_using_play_30_minute</item>
        <item>@string/customer_using_play_one_hour</item>
        <item>@string/customer_using_play_two_hour</item>
        <item>@string/customer_using_play_three_hour</item>
        <item>@string/customer_using_play_four_hour</item>
    </string-array>

    <string name="customer_using_play_30_minute">30분</string>
    <string name="customer_using_play_one_hour">1시간</string>
    <string name="customer_using_play_two_hour">2시간</string>
    <string name="customer_using_play_three_hour">3시간</string>
    <string name="customer_using_play_four_hour">4시간</string>
    <string name="customer_using_start_time">시작시간</string>
    <string name="customer_using_end_time">종료시간</string>
    <string name="customer_parent_accompany_yn">보호자</string>
    <string name="customer_parent_accompany_yes">있음</string>
    <string name="customer_parent_accompany_no">없음</string>
    <string name="customer_parent_tea">부모음료</string>
    <string name="customer_add_goods">추가구매</string>
    <string name="customer_add_memo">메모</string>
    <string name="select">선택</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="registration">등록</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="on_sales">판매</string>
    <string name="not_sales">판매중지</string>
    <string name="permission_storage">파일 쓰기 접근 권한이 필요해요</string>
    <string name="permission_setting">[설정] > [권한] 에서 권한을 허용할 수 있어요.</string>
    <string name="permission_granted">권한 허가</string>
    <string name="permission_denied">권한 거부</string>
    <string name="photo_cancel">취소 되었습니다.</string>
    <string name="customer_save_ok">정상적으로 저장 되었습니다.</string>
    <string name="input_name_please">이름을 입력해 주세요.</string>
    <string name="input_price_please">가격을 입력해 주세요.</string>
    <string name="input_type_please">유형을 선택해 주세요.</string>

    <string name="dialog_title">알림</string>
    <string name="dialog_yes">확인</string>
    <string name="dialog_no">취소</string>
    <string name="dialog_not_found_customer">고객을 찾을 수 없습니다.\n등록 하시겠습니까?</string>

    <string name="customer_enterance">입장</string>
    <string name="customer_enterance_add_items">업데이트</string>

    <string name="goods_list">상품 목록</string>
    <string name="goods_registration">상품 등록</string>

    <string name="goods_type">상품 유형</string>
    <string-array name="goods_type_items">
        <item>@string/select</item>
        <item>@string/goods_type_parent_price</item>
        <item>@string/goods_type_drink</item>
        <item>@string/goods_type_cookie</item>
        <item>@string/goods_type_noodle</item>
        <item>@string/goods_type_ice_cream</item>
        <item>@string/goods_type_frozen_food</item>
    </string-array>

    <string name="goods_type_parent_price">부모 음료 혹은 입장권</string>
    <string name="goods_type_drink">음료</string>
    <string name="goods_type_cookie"> 과자</string>
    <string name="goods_type_noodle">라면</string>
    <string name="goods_type_ice_cream">아이스 크림</string>
    <string name="goods_type_frozen_food">냉동 식품</string>

    <string name="goods_name_price">%1$s:%2$s원,</string>
    <string name="display_name">고객명 : %s</string>
    <string name="display_no_phone_number">전화번호 없음</string>
    <string name="display_phone">전화번호 : %s</string>
    <string name="display_phone_with_parent">전화번호 : %1$s\n부모님 전화번호 : %2$s</string>
    <string name="is_modify_info">정보를 수정 하시겠습니까?</string>
    <string name="is_delete_info">정보를 삭제 하시겠습니까?</string>
    <string name="fail_delete">삭제를 실패 했습니다.</string>
    <string name="play_time">놀이시간 : %1$s ~ %2$s</string>
    <string name="total_payment">금액 : %d원</string>
    <string name="display_goods_name">상품명 : %s</string>
    <string name="display_price">매입금액 : %1$d\n판매금액 : %2$d</string>
</resources>
