<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="right|center_vertical"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/customer_enterance"
            android:text="@string/customer_menu_button_input"
            android:background="@drawable/co_line_btn_02_selector"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/customer_addition"
            android:text="@string/customer_menu_button_addition"
            android:background="@drawable/co_line_btn_02_selector"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/customer_registration"
            android:text="@string/customer_menu_button_registration"
            android:background="@drawable/co_line_btn_02_selector"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/customer_search"
            android:text="@string/customer_menu_button_search"
            android:background="@drawable/co_line_btn_02_selector"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>
</LinearLayout>