<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 사진 촬영 / 갤러리 버튼 -->
        <Button
            android:id="@+id/take_photo_bt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/camera"
            android:background="@drawable/co_line_btn_selector"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/move_gallery_bt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/move_gallery_bt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gallery"
            android:background="@drawable/co_line_btn_selector"
            app:layout_constraintStart_toEndOf="@+id/take_photo_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- 이미지 영역 -->
        <ImageView
            android:id="@+id/items_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:background="@xml/background_white_line_e2e2e2"
            app:layout_constraintBottom_toTopOf="@+id/registration_name_tv"
            app:layout_constraintLeft_toLeftOf="@+id/take_photo_bt"
            app:layout_constraintRight_toRightOf="@+id/move_gallery_bt"
            app:layout_constraintTop_toBottomOf="@+id/take_photo_bt"/>

        <!-- 이름 -->
        <TextView
            android:id="@+id/registration_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:background="@xml/background_f1f1f1_and_underline"
            app:layout_constraintBaseline_toBaselineOf="@+id/registration_name_et"
            app:layout_constraintEnd_toStartOf="@+id/registration_name_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/items_image"/>

        <EditText
            android:id="@+id/registration_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:background="@xml/background_white_and_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/registration_add_memo_tv"
            app:layout_constraintTop_toBottomOf="@+id/items_image"/>

        <!-- 단가 / 전화번호 -->
        <TextView
            android:id="@+id/registration_first_field_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/phone"
            android:background="@xml/background_f1f1f1_and_underline"
            app:layout_constraintBaseline_toBaselineOf="@+id/registration_first_field_et"
            app:layout_constraintEnd_toStartOf="@+id/registration_first_field_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_name_tv"/>

        <EditText
            android:id="@+id/registration_first_field_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/phone_hint"
            android:background="@xml/background_white_and_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/registration_first_field_tv"
            app:layout_constraintTop_toBottomOf="@+id/registration_name_et"/>

        <!-- 판매금액 / 부모 전화번호 -->
        <TextView
            android:id="@+id/registration_second_field_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/parents_phone"
            android:background="@xml/background_f1f1f1_and_underline"
            app:layout_constraintBaseline_toBaselineOf="@+id/registration_second_field_et"
            app:layout_constraintEnd_toStartOf="@+id/registration_second_field_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_first_field_tv"/>

        <EditText
            android:id="@+id/registration_second_field_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/phone_hint"
            android:background="@xml/background_white_and_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/registration_second_field_tv"
            app:layout_constraintTop_toBottomOf="@+id/registration_first_field_et"/>

        <TextView
            android:id="@+id/registration_third_field_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/goods_type"
            android:background="@xml/background_f1f1f1_and_underline"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/registration_third_field_spinner"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_second_field_tv" />

        <Spinner
            android:id="@+id/registration_third_field_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/registration_third_field_tv"
            app:layout_constraintTop_toBottomOf="@+id/registration_second_field_et" />

        <!-- 메모 -->
        <TextView
            android:id="@+id/registration_add_memo_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/customer_add_memo"
            android:background="@xml/background_f1f1f1_and_underline"
            app:layout_constraintBaseline_toBaselineOf="@+id/registration_add_memo_et"
            app:layout_constraintEnd_toStartOf="@+id/registration_add_memo_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_third_field_tv"/>

        <EditText
            android:id="@+id/registration_add_memo_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="5"
            android:gravity="top"
            android:scrollbars="vertical"
            android:background="@xml/background_white_and_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/registration_add_memo_tv"
            app:layout_constraintTop_toBottomOf="@+id/registration_third_field_spinner"/>

        <!-- 삭제 버튼 -->
        <Button
            android:id="@+id/delete_bt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@drawable/co_line_btn_selector"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/on_sale_bt"
            app:layout_constraintTop_toBottomOf="@id/registration_add_memo_et"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- 판매중 버튼 -->
        <Button
            android:id="@+id/on_sale_bt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@drawable/co_line_btn_selector"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/registration_bt"
            app:layout_constraintStart_toStartOf="@id/delete_bt"
            app:layout_constraintTop_toBottomOf="@id/registration_add_memo_et"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <!-- 등록 버튼 -->
        <Button
            android:id="@+id/registration_bt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:background="@drawable/co_line_btn_selector"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/on_sale_bt"
            app:layout_constraintTop_toBottomOf="@id/registration_add_memo_et"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>